--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -20,10 +20,10 @@ OPTION_VALUE_YEAR=Anno
 OPTION_VALUE_DECADE=Decennio
 OPTION_VALUE_PLAYLIST=Playlist
 
-;TODO: OPTION_VALUE_BORDERLESS=Borderless
+OPTION_VALUE_BORDERLESS=Massima
 
 OPTION_VALUE_WHENNOVIDEO=Quando non c'è videl
-;TODO: OPTION_VALUE_WHENNOVIDEOANDIMAGE=When No Video and Image
+OPTION_VALUE_WHENNOVIDEOANDIMAGE=Quando nessun video e immagine
 
 OPTION_VALUE_SMALL=Piccolo
 OPTION_VALUE_BIG=Grande
@@ -40,9 +40,9 @@ OPTION_VALUE_AUTO=Auto
 OPTION_VALUE_SEC=Secondo
 OPTION_VALUE_SECS=Secondi
 
-;TODO: OPTION_VALUE_PLAIN=stylized
-;TODO: OPTION_VALUE_OLINE1=with thin edge
-;TODO: OPTION_VALUE_OLINE2=with thick edge
+OPTION_VALUE_PLAIN=Stilizzato
+OPTION_VALUE_OLINE1=Con bordo sottile
+OPTION_VALUE_OLINE2=Con bordo spesso
 
 OPTION_VALUE_SIMPLE=Semplice
 OPTION_VALUE_ZOOM=Zoom
@@ -50,9 +50,9 @@ OPTION_VALUE_SLIDE=Scorrimento
 OPTION_VALUE_BALL=Ball
 OPTION_VALUE_SHIFT=Shift
 
-;TODO: OPTION_VALUE_EURO=Euro
-;TODO: OPTION_VALUE_JAPAN=Japan
-;TODO: OPTION_VALUE_AMERICAN=American
+OPTION_VALUE_EURO=Euro
+OPTION_VALUE_JAPAN=Giappone
+OPTION_VALUE_AMERICAN=Americano
 
 OPTION_VALUE_BLUE=Blu
 OPTION_VALUE_GREEN=Verde
@@ -69,9 +69,9 @@ OPTION_VALUE_SELECT_PLAYERS=Seleziona giocatore
 OPTION_VALUE_OPEN_MENU=Apri il Menu
 
 SING_LOADING=Caricamento...
-;TODO: SING_LOADING_SONGS=Loading songs
-;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
-;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
+SING_LOADING_SONGS=Caricamento di canzoni
+SING_LOADING_CHECK_FOLDER=Ricerca di canzoni nella cartella %s
+SING_LOADING_LOAD_FOLDER=Caricamento di canzoni dalla cartella %s
 
 SING_CHOOSE_MODE=Scegli la modalità
 SING_SING=Canta
@@ -98,7 +98,6 @@ SING_OPTIONS_WHEREAMI=Impostazioni
 SING_OPTIONS_GAME=Generali
 SING_OPTIONS_GRAPHICS=Grafica
 SING_OPTIONS_SOUND=Audio
-;TODO: SING_OPTIONS_INPUT=Input
 SING_OPTIONS_LYRICS=Testi
 SING_OPTIONS_THEMES=Temi
 SING_OPTIONS_RECORD=Microfono
@@ -112,15 +111,15 @@ SING_OPTIONS_GAME_DIFFICULTY=Difficoltà
 SING_OPTIONS_GAME_LANGUAGE=Lingua
 SING_OPTIONS_GAME_TABS=Schede
 SING_OPTIONS_GAME_SORTING=Ordinamento
-;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
+SING_OPTIONS_GAME_JOYPAD_SUPPORT=Attiva il gamepad
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Impostazioni Grafica
 SING_OPTIONS_GRAPHICS_DESC=Modifica le impostazioni grafiche
 SING_OPTIONS_GRAPHICS_RESOLUTION=Risoluzione
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Schermo intero
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
-;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
-;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
+SING_OPTIONS_GRAPHICS_EFFECTSING=Effetti del canto
+SING_OPTIONS_GRAPHICS_SCREENFADE=Dissolvenza dello schermo
+SING_OPTIONS_GRAPHICS_LOADANIMATION=Animazione caricamento
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualizzazioni
 SING_OPTIONS_GRAPHICS_LINEBONUS=Linee Bonus
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Grandezza video
@@ -146,7 +145,7 @@ SING_OPTIONS_LYRICS_SOLMIZATION=Solfeggio
 SING_OPTIONS_LYRICS_NOTELINES=Pentagramma
 
 SING_OPTIONS_THEMES_WHEREAMI=Impostazioni Temi
-SING_OPTIONS_THEMES_DESC=scegli temi e skin
+SING_OPTIONS_THEMES_DESC=Scegli temi e skin
 SING_OPTIONS_THEMES_THEME=Temi
 SING_OPTIONS_THEMES_SKIN=Skin
 SING_OPTIONS_THEMES_COLOR=Colore
@@ -159,11 +158,10 @@ SING_OPTIONS_RECORD_CHANNEL=Canale
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Impostazioni Avanzate
 SING_OPTIONS_ADVANCED_DESC=Modifica ulteriori impostazioni
-;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
-;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
+SING_OPTIONS_ADVANCED_DEBUG=Debug
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscopio
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Domande di sicurezza
 SING_OPTIONS_ADVANCED_LINEBONUS=Linee Bonus
-;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Finita vai a
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Menu Party automatico
 
@@ -172,14 +170,14 @@ SING_LEGEND_NAVIGATE=Naviga
 SING_LEGEND_CONTINUE=Continua
 SING_LEGEND_ESC=Indietro
 
-;TODO: SING_PLAYER_TITLE=Profiles
-;TODO: SING_PLAYER_READY=Players ready to sing
-;TODO: SING_PLAYER_COUNT=Number of players
-;TODO: SING_PLAYER_EDIT=Customize a player
-;TODO: SING_PLAYER_NAME=Write your name
-;TODO: SING_PLAYER_COLOR=Pick a color
-;TODO: SING_PLAYER_LEVEL=Choose a level
-;TODO: SING_PLAYER_AVATAR=Select your avatar
+SING_PLAYER_TITLE=Profili
+SING_PLAYER_READY=Giocatori pronti a cantare
+SING_PLAYER_COUNT=Numero di giocatori
+SING_PLAYER_EDIT=Personalizza un giocatore
+SING_PLAYER_NAME=Scrivi il tuo nome
+SING_PLAYER_COLOR=Scegli un colore
+SING_PLAYER_LEVEL=Scegli un livello
+SING_PLAYER_AVATAR=Seleziona il tuo avatar
 
 SING_DIFFICULTY_DESC=Seleziona la difficoltà
 SING_DIFFICULTY_WHEREAMI=Difficoltà
@@ -188,20 +186,20 @@ SING_EASY=Facile
 SING_MEDIUM=Media
 SING_HARD=Difficile
 
-SING_SONG_SELECTION_DESC=scegli la tua canzone
+SING_SONG_SELECTION_DESC=Scegli la tua canzone
 SING_SONG_SELECTION_WHEREAMI=Selezione canzone
-SING_SONG_SELECTION_GOTO=vai a ..
+SING_SONG_SELECTION_GOTO=Vai a ..
 SING_SONG_SELECTION=Brano
 SING_SONG_SELECTION_MENU=Menu
 SING_SONG_SELECTION_PLAYLIST=Playlist
-;TODO: SING_SONGS_IN_CAT=Song
+SING_SONGS_IN_CAT=Canzone
 SING_SONGS_IN_CAT=Canzoni
 PLAYLIST_CATTEXT=Playlist: %s
-;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
-;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
+SING_SONG_SELECTION_LEGEND_TITLE=Leggenda
+SING_SONG_SELECTION_LEGEND_VIDEO=Video
+SING_SONG_SELECTION_LEGEND_MEDLEY=Versione breve
+SING_SONG_SELECTION_LEGEND_MEDLEYC=Versione breve calcolata
+SING_SONG_SELECTION_LEGEND_DUET=Duetto
 
 SING_TOTAL=Punteggio
 SING_MODE=Canta
@@ -313,7 +311,7 @@ PARTY_SELECTMODE=Sfida %d
 
 PARTY_ROUND_DESC=I prossimi che si sfideranno sono
 PARTY_ROUND_WHEREAMI=Prossima sfida
-PARTY_ROUND_LEGEND_CONTINUE=incomincia la sfida
+PARTY_ROUND_LEGEND_CONTINUE=Incomincia la sfida
 
 PARTY_SONG_WHEREAMI=Seleziona la canzone
 PARTY_SONG_LEGEND_CONTINUE=Inizia la sfida!
@@ -334,10 +332,10 @@ NEXT_ROUND=Prossima sfida:
 
 PARTY_DISMISSED=Respinto!
 PARTY_SCORE_WINS=%s
-PARTY_SCORE_WINS2=vince!
+PARTY_SCORE_WINS2=Vince!
 
 MODE_RANDOM_NAME=Casuale
-;TODO: MODE_RANDOM_DESC=Keep yourself on your toes! The game will select a mode for you at random!
+MODE_RANDOM_DESC=Tieniti in punta di piedi! Il gioco selezionerà una modalità per te a caso!
 
 MODE_HOLDTHELINE_NAME=Attenzione alla linea!
 ;TODO: MODE_HOLDTHELINE_DESC=Keep your rating above the line for the longest!
@@ -345,22 +343,22 @@ MODE_HOLDTHELINE_NAME=Attenzione alla linea!
 ;TODO: MODE_HOLDTHELINEBLIND_NAME=Hold the Blind
 ;TODO: MODE_HOLDTHELINEBLIND_DESC=Keep your rating above the line for the longest, but with the notes hidden!
 
-;TODO: MODE_7000POINTS_NAME=Until 7000
+MODE_7000POINTS_NAME=Fino a 7000
 ;TODO: MODE_7000POINTS_DESC=Race to 7000 Points!
 
-;TODO: MODE_7000POINTSBLIND_NAME=Blind 7000
+MODE_7000POINTSBLIND_NAME=Cieco 7000
 ;TODO: MODE_7000POINTSBLIND_DESC=Race to 7000 points, but without seeing the notes!
 
 MODE_5000POINTS_NAME=Fino a 5000!
 ;TODO: MODE_5000POINTS_DESC=Race to 5000 Points!
 
-;TODO: MODE_5000POINTSBLIND_NAME=Blind 5000
+MODE_5000POINTSBLIND_NAME=Cieco 5000
 ;TODO: MODE_5000POINTSBLIND_DESC=Race to 5000 points, but without seeing the notes!
 
-;TODO: MODE_2000POINTS_NAME=Until 2000
+MODE_2000POINTS_NAME=Fino a 2000
 ;TODO: MODE_2000POINTS_DESC=Race to 2000 Points!
 
-;TODO: MODE_2000POINTSBLIND_NAME=Blind 2000
+MODE_2000POINTSBLIND_NAME=Cieco 2000
 ;TODO: MODE_2000POINTSBLIND_DESC=Race to 2000 points, but without seeing the notes!
 
 MODE_DUEL_NAME=Duello
@@ -378,7 +376,7 @@ MODE_BLIND_NAME=Modalità ceca
 MODE_1000BLIND_NAME =+1000 cieco
 ;TODO: MODE_1000BLIND_DESC = Gain a lead of more than 1000 points, but without seeing the notes!
 
-;TODO: MODE_DEAF_NAME = Deaf
+MODE_DEAF_NAME =Sordo
 ;TODO: MODE_DEAF_DESC = Think you know the notes? Can you sing it without the acompaniment?
 
 ;TODO: MODE_BLINDLYRICS_NAME = No Lyrics
@@ -467,7 +465,7 @@ SING_OPTIONS_NETWORK_AUTO_PLAYER=Riproduci
 SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Punteggio (Facile)
 SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Punteggio (Medio)
 SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Punteggio (Difficile)
-SING_OPTIONS_NETWORK_NO_DLL=Non ci sono DLL compatibili con Ultrastar Deluxe...
+SING_OPTIONS_NETWORK_NO_DLL=Non ci sono DLL compatibili con Ultrastar...
 SING_OPTIONS_NETWORK_DELETE_PLAYER= Sei sicuro di voler cancellare il giocatore %0:s del sito %1:s?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Inserisci
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Cancella
@@ -590,33 +588,34 @@ SING_OPTIONS_WEBCAM_RESOLUTION=Risoluzione
 ;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No Webcam Found!
 ;TODO: SING_OPTIONS_WEBCAM_FLIP=Flip
 SING_OPTIONS_WEBCAM_EFFECT=Effetti
-;TODO: SING_OPTIONS_WEBCAM_BRIGHTNESS=Brightness
-;TODO: SING_OPTIONS_WEBCAM_SATURATION=Saturation
-;TODO: SING_OPTIONS_WEBCAM_HUE=Hue
+SING_OPTIONS_WEBCAM_BRIGHTNESS=Luminosità
+SING_OPTIONS_WEBCAM_SATURATION=Saturazione
+SING_OPTIONS_WEBCAM_HUE=Tonalità
+SING_OPTIONS_WEBCAM_PREVIEW=Attiva l'anteprima
 ;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable Preview
 ;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable Preview
 
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_NORMAL=Normal
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_GRAYSCALE=Grayscale
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Black & White
+SING_OPTIONS_WEBCAM_EFFECT_NORMAL=Normale
+SING_OPTIONS_WEBCAM_EFFECT_GRAYSCALE=Scala di grigi
+SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Nero bianco
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_NEGATIVE=Negative
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary Image
+SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Immagine binaria
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_DILATE=Dilate
 SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Soglia
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_EDGES=Edges
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian Blur
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
+SING_OPTIONS_WEBCAM_EFFECT_EDGES=Bordi
+SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Sfocatura gaussiana
+SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalizzato
+SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erodere
 
-;TODO: PARTY_PLAYLIST_MANUAL=Manual Selection
+PARTY_PLAYLIST_MANUAL=Selezione manuale
 ;TODO: PARTY_MODE_JUKEBOX_NO_SONGS=Playlist is empty!
-;TODO: SONG_MENU_OPEN_CATEGORY=Open category
-;TODO: SONG_MENU_CLOSE_CATEGORY=Close category
+SONG_MENU_OPEN_CATEGORY=Categoria aperta
+SONG_MENU_CLOSE_CATEGORY=Chiudi categoria
 ;TODO: SONG_MENU_START_JUKEBOX=Start Jukebox!
 ;TODO: SONG_MENU_NAME_JUKEBOX=Menu Jukebox
 
-;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
-;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
+WEBSITE_EXIST_SONG=La canzone appartiene al sito web: %0:s
+WEBSITE_NOT_EXIST_SONG=La canzone non appartiene a nessun sito web!
 
 NAME_PLAYERS_COUNT=Numero di giocatori
 NAME_CURRENT_PLAYER=Giocatore
@@ -634,77 +633,77 @@ SING_OPTIONS_JUKEBOX=Jukebox
 ;TODO: SING_OPTIONS_JUKEBOX_WHEREAMI=Jukebox Options
 
 OPTION_VALUE_TO_SING=Inizia la sfida!
-;TODO: OPTION_VALUE_ACTUAL=Actual
-;TODO: OPTION_VALUE_NEXT=Next
-;TODO: OPTION_VALUE_OTHER=Other
-;TODO: OPTION_VALUE_FILL=Fill
-;TODO: OPTION_VALUE_OUTLINE=Outline
-;TODO: OPTION_VALUE_GRAY=Gray
-;TODO: OPTION_VALUE_WHITE=White
-;TODO: OPTION_VALUE_TURQUOISE=Turquoise
-;TODO: OPTION_VALUE_SALMON=Salmon
-;TODO: OPTION_VALUE_GREENYELLOW=GreenYellow
-;TODO: OPTION_VALUE_LAVENDER=Lavender
-;TODO: OPTION_VALUE_BEIGE=Beige
+OPTION_VALUE_ACTUAL=Superiore
+OPTION_VALUE_NEXT=Inferiore
+OPTION_VALUE_OTHER=Altro
+OPTION_VALUE_FILL=Riempire
+OPTION_VALUE_OUTLINE=Contorno
+OPTION_VALUE_GRAY=Grigio
+OPTION_VALUE_WHITE=Bianco
+OPTION_VALUE_TURQUOISE=Turchese
+OPTION_VALUE_SALMON=Salmone
+OPTION_VALUE_GREENYELLOW=Verde giallo
+OPTION_VALUE_LAVENDER=Lavanda
+OPTION_VALUE_BEIGE=Beige
 ;TODO: OPTION_VALUE_TEAL=Teal
-;TODO: OPTION_VALUE_ORCHID=Orchid
-;TODO: OPTION_VALUE_STEELBLUE=Steel Blue
+OPTION_VALUE_ORCHID=Orchidea
+OPTION_VALUE_STEELBLUE=Blu acciaio
 ;TODO: OPTION_VALUE_PLUM=Plum
-;TODO: OPTION_VALUE_CHOCOLATE=Chocolate
-;TODO: OPTION_VALUE_GOLD=Gold
-;TODO: OPTION_VALUE_DARKBLUE=Dark Blue
-;TODO: OPTION_VALUE_SKY=Sky
-;TODO: OPTION_VALUE_HARLEQUIN=Harlequin
-;TODO: OPTION_VALUE_CYAN=Cyan
-;TODO: OPTION_VALUE_FLAME=Flame
+OPTION_VALUE_CHOCOLATE=Cioccolato
+OPTION_VALUE_GOLD=Oro
+OPTION_VALUE_DARKBLUE=Blu scuro
+OPTION_VALUE_SKY=Cielo
+OPTION_VALUE_HARLEQUIN=Arlecchino
+OPTION_VALUE_CYAN=Ciano
+OPTION_VALUE_FLAME=Fiamma
 
-;TODO: JUKEBOX_SONGOPTIONS_VIDEO=Video Options
-;TODO: JUKEBOX_SONGOPTIONS_VIDEO_ASPECT=Aspect
-;TODO: JUKEBOX_SONGOPTIONS_VIDEO_WIDTH=Width
-;TODO: JUKEBOX_SONGOPTIONS_VIDEO_HEIGHT=Height
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_SIZE=Size
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparency
+JUKEBOX_SONGOPTIONS_VIDEO=Opzioni video
+JUKEBOX_SONGOPTIONS_VIDEO_ASPECT=Aspetto
+JUKEBOX_SONGOPTIONS_VIDEO_WIDTH=Larghezza
+JUKEBOX_SONGOPTIONS_VIDEO_HEIGHT=Altezza
+JUKEBOX_SONGOPTIONS_LYRIC=Opzioni liriche
+JUKEBOX_SONGOPTIONS_LYRIC_SIZE=Dimensione
+JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Posizione
+JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Trasparenza
 JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Colore
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_LINE=Line
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
+JUKEBOX_SONGOPTIONS_LYRIC_LINE=Linea
+JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Proprietà
 JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Rosso
 JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Verde
 JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Blu
 
-;TODO: JUKEBOX_SONGOPTIONS_VIDEO_STRETCH=Stretch
-;TODO: JUKEBOX_SONGOPTIONS_VIDEO_CROP=Crop
+JUKEBOX_SONGOPTIONS_VIDEO_STRETCH=Allungare
+JUKEBOX_SONGOPTIONS_VIDEO_CROP=Raccolto
 ;TODO: JUKEBOX_SONGOPTIONS_VIDEO_LETTERBOX=LetterBox
 
 JUKEBOX_SONGOPTIONS_SAVE=Salva
 ;TODO: JUKEBOX_SONGOPTIONS_CLOSE=Close
-;TODO: JUKEBOX_SONGOPTIONS_DEFAULT=Default
-;TODO: JUKEBOX_SONGOPTIONS_OPTIONSSAVED=Saved!
+JUKEBOX_SONGOPTIONS_DEFAULT=Predefinito
+JUKEBOX_SONGOPTIONS_OPTIONSSAVED=Salvato!
 
-;TODO: SING_SONG_CREDITS=Credits
+SING_SONG_CREDITS=Crediti
 SING_JUKEBOX=Jukebox
-;TODO: SING_JUKEBOX_DESC=Listen to my collection
+SING_JUKEBOX_DESC=Ascolta le mie canzoni
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 ;TODO: JUKEBOX_OPTIONS_DESC=Playlist Options
 ;TODO: JUKEBOX_OPTIONS_WHEREAMI=Jukebox Options
 JUKEBOX_OPTIONS_PLAYLIST=Playlist
 JUKEBOX_OPTIONS_PLAYLIST_MODE=Modalità
 
-;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
-;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
+SING_OPTIONS_ADVANCED_SINGSCORES=Punteggi sul canto
+SING_OPTIONS_ADVANCED_TOPSCORES=Migliori risultati
 OPTION_VALUE_ALL=Tutti i giocatori
 OPTION_VALUE_PLAYER=Giocatore
 
-;TODO: SING_ABOUT=About
-;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
-;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
-;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
-;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
-;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
-;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
-;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+SING_ABOUT=A proposito di
+SING_ABOUT_DESC=A proposito di Ultrastar Deluxe WorldParty
+ABOUT_MAIN=A proposito di...
+ABOUT_USDX_DEVELOPEDBY=Sviluppato da
+ABOUT_CHECK_CHECKING=Verifica di nuovi aggiornamenti...
+ABOUT_CHECK_AVAILABLE=C'è una nuova versione disponibile
+ABOUT_CHECK_UPTODATE=WorldParty è aggiornato
+ABOUT_CHECK_CONNECTION=Non c'è connessione a Internet
+ABOUT_OVERVIEW=Scopri un nuovo modo di cantare, da solo, in coppia o con gli amici. \n Il divertimento è garantito.\n\nWorldParty è un fork della versione originale Ultrastar Deluxe 1.1 progettato e sviluppato dal team UltraStar España, conta con la più grande comunità di karaoke.\n\n\nQuesto programma è gratuito e libre sotto licenza GPL. \n\n Visitaci per maggiori informazioni.\n\nhttps://ultrastar-es.org
 
-;TODO: DEVELOPERS_TITLE=Developed by
-;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_TITLE=Sviluppato da
+DEVELOPERS_OVERVIEW=Persone che hanno contribuito a questo progetto:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visitaci per maggiori informazioni.\n\nhttps://ultrastar-es.org
