--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -69,9 +69,9 @@ OPTION_VALUE_SELECT_PLAYERS=Pasirinkite žaidėjus
 OPTION_VALUE_OPEN_MENU=Atidarykite meniu
 
 SING_LOADING=Kraunasi...
-;TODO: SING_LOADING_SONGS=Loading songs
+SING_LOADING_SONGS=Dainų įkėlimas
 ;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
-;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
+SING_LOADING_LOAD_FOLDER=Įkeliamos dainos iš aplanko %s
 
 SING_CHOOSE_MODE=Pasirinkite režimą
 SING_SING=Dainuoti
@@ -162,7 +162,6 @@ SING_OPTIONS_ADVANCED_DEBUG=Derinti
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Osciloskopas
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Saugos klausimai
 SING_OPTIONS_ADVANCED_LINEBONUS=Linijos premija
-;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 ;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK=After song select
 ;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto PartyMenu
 
@@ -288,21 +287,21 @@ SONG_JUMPTO_CATTEXT=Ieškoti: %s
 ;TODO: PARTY_DIFFICULTY=Difficulty
 ;TODO: PARTY_PLAYLIST=Playlist Mode
 ;TODO: PARTY_PLAYLIST_ALL=All songs
-;TODO: PARTY_PLAYLIST_CATEGORY=Folder
+PARTY_PLAYLIST_CATEGORY=Aplankas
 ;TODO: PARTY_PLAYLIST_PLAYLIST=Playlist
 ;TODO: PARTY_TEAMS=Number of teams
 ;TODO: PARTY_TEAMS_PLAYER1=Num. of singers
 ;TODO: PARTY_TEAMS_PLAYER2=Num. of singers
 ;TODO: PARTY_TEAMS_PLAYER3=Num. of singers
 
-;TODO: PARTY_LEGEND_CONTINUE=Continue
+PARTY_LEGEND_CONTINUE=Tęsti
 
 ;TODO: PARTY_OPTIONS_DESC=Settings for the party-game
 ;TODO: PARTY_OPTIONS_WHEREAMI=Party Options
 
 ;TODO: PARTY_PLAYER_DESC=Enter player- and teamnames!
 ;TODO: PARTY_PLAYER_WHEREAMI=Party Names
-;TODO: PARTY_PLAYER_ENTER_NAME=Enter names
+PARTY_PLAYER_ENTER_NAME=Įveskite pavadinimus
 
 
 ;TODO: PARTY_ROUNDS_DESC=Select which modes you want to play
@@ -327,9 +326,9 @@ SONG_JUMPTO_CATTEXT=Ieškoti: %s
 ;TODO: PARTY_WIN_LEGEND_CONTINUE=Back to main-menu
 
 ;TODO: PARTY_ROUND=Round
-;TODO: PARTY_ROUND_WINNER=Winner
+PARTY_ROUND_WINNER=Nugalėtojas
 ;TODO: PARTY_NOTPLAYEDYET=Not played yet
-;TODO: PARTY_NOBODY=Nobody
+PARTY_NOBODY=Niekas
 ;TODO: NEXT_ROUND=Next round:
 
 ;TODO: PARTY_DISMISSED=Dismissed!
@@ -345,22 +344,22 @@ SONG_JUMPTO_CATTEXT=Ieškoti: %s
 ;TODO: MODE_HOLDTHELINEBLIND_NAME=Hold the Blind
 ;TODO: MODE_HOLDTHELINEBLIND_DESC=Keep your rating above the line for the longest, but with the notes hidden!
 
-;TODO: MODE_7000POINTS_NAME=Until 7000
+MODE_7000POINTS_NAME=Iki 7000
 ;TODO: MODE_7000POINTS_DESC=Race to 7000 Points!
 
-;TODO: MODE_7000POINTSBLIND_NAME=Blind 7000
+MODE_7000POINTSBLIND_NAME=Aklas 7000
 ;TODO: MODE_7000POINTSBLIND_DESC=Race to 7000 points, but without seeing the notes!
 
-;TODO: MODE_5000POINTS_NAME=Until 5000
+MODE_5000POINTS_NAME=Iki 5000
 ;TODO: MODE_5000POINTS_DESC=Race to 5000 Points!
 
-;TODO: MODE_5000POINTSBLIND_NAME=Blind 5000
+MODE_5000POINTSBLIND_NAME=Aklas 5000
 ;TODO: MODE_5000POINTSBLIND_DESC=Race to 5000 points, but without seeing the notes!
 
-;TODO: MODE_2000POINTS_NAME=Until 2000
+MODE_2000POINTS_NAME=Iki 2000
 ;TODO: MODE_2000POINTS_DESC=Race to 2000 Points!
 
-;TODO: MODE_2000POINTSBLIND_NAME=Blind 2000
+MODE_2000POINTSBLIND_NAME=Aklas 2000
 ;TODO: MODE_2000POINTSBLIND_DESC=Race to 2000 points, but without seeing the notes!
 
 ;TODO: MODE_DUEL_NAME=Duel
@@ -369,33 +368,33 @@ SONG_JUMPTO_CATTEXT=Ieškoti: %s
 ;TODO: MODE_TEAMDUEL_NAME=Team Duel
 ;TODO: MODE_TEAMDUEL_DESC=Pass The Mic! Work together to get a higher score than the other team!
 
-;TODO: MODE_BLIND_NAME=Blind Mode
+MODE_BLIND_NAME=Aklųjų režimas
 ;TODO: MODE_BLIND_DESC=A 1v1 duel, but with the notes hidden!
 
 ;TODO: MODE_BLINDTOTAL_NAME=Total Darkness!
 ;TODO: MODE_BLINDTOTAL_DESC=A duel, but with the notes and the lyrics hidden. Only for the brave!
 
-;TODO: MODE_1000BLIND_NAME = +1000 Blind
+MODE_1000BLIND_NAME = +1000 Aklas
 ;TODO: MODE_1000BLIND_DESC = Gain a lead of more than 1000 points, but without seeing the notes!
 
 ;TODO: MODE_DEAF_NAME = Deaf
 ;TODO: MODE_DEAF_DESC = Think you know the notes? Can you sing it without the acompaniment?
 
-;TODO: MODE_BLINDLYRICS_NAME = No Lyrics
+MODE_BLINDLYRICS_NAME = Nėra dainų
 ;TODO: MODE_BLINDLYRICS_DESC = Think you know all the lyrics? Sing with the lyrics hidden!
 
-;TODO: MODE_500BLIND_NAME = +500 Blind
+MODE_500BLIND_NAME = +500 Aklas
 ;TODO: MODE_500BLIND_DESC = Gain a lead of more than 500 points, but without seeing the notes!
 
 ;TODO: MODE_SHORTSONG_NAME = Short Song
 ;TODO: MODE_SHORTSONG_DESC = A fast-paced 1v1 duel over half the song!
 
-;TODO: MODE_HARDCORE_NAME=Hardcore
+MODE_HARDCORE_NAME=Hardcore
 ;TODO: MODE_HARDCORE_DESC=Battle for a three-line lead on your opponent!
 
-;TODO: STAT_MAIN=Statistics
+STAT_MAIN=Statistika
 ;TODO: STAT_MAIN_DESC=General
-;TODO: STAT_MAIN_WHEREAMI=Statistics
+STAT_MAIN_WHEREAMI=Statistika
 
 ;TODO: STAT_OVERVIEW_INTRO=%0:s Statistics.  \n Last Reset at %2:.2d.%1:.2d.%3:d
 ;TODO: STAT_OVERVIEW_SONG=%0:d Songs(%3:d with Video), whereof %1:d already were played  and %2:d were not played yet.\n The most popular Song is %5:s from %4:s.
@@ -403,23 +402,23 @@ SONG_JUMPTO_CATTEXT=Ieškoti: %s
 
 ;TODO: STAT_FORMAT_DATE=%1:.2d.%0:.2d.%2:d
 
-;TODO: STAT_DETAIL=Statistics
+STAT_DETAIL=Statistika
 ;TODO: STAT_DETAIL_WHEREAMI=Detail Statistics
 
-;TODO: STAT_NEXT=Next Page
-;TODO: STAT_PREV=Previous Page
-;TODO: STAT_REVERSE=Reverse Order
+STAT_NEXT=Kitas puslapis
+STAT_PREV=Ankstesnis puslapis
+STAT_REVERSE=Atvirkštinė tvarka
 ;TODO: STAT_PAGE=Page %0:d of %1:d pages\n (%2:d of %3:d Entrys)
 
 ;TODO: STAT_DESC_SCORES=HighScores
 ;TODO: STAT_DESC_SCORES_REVERSED=LowScores
 ;TODO: STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
 
-;TODO: STAT_DESC_SINGERS=Best Singers
+STAT_DESC_SINGERS=Geriausi dainininkai
 ;TODO: STAT_DESC_SINGERS_REVERSED=Worst Singers
 ;TODO: STAT_FORMAT_SINGERS=%0:s \n Average Score: %1:d
 
-;TODO: STAT_DESC_SONGS=Most popular Songs
+STAT_DESC_SONGS=Populiariausi dainos
 ;TODO: STAT_DESC_SONGS_REVERSED=Least popular Songs
 ;TODO: STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx sung
 
@@ -432,11 +431,11 @@ SONG_JUMPTO_CATTEXT=Ieškoti: %s
 
 ;TODO: INFO_FILE_SAVED=File saved
 ;TODO: ERROR_SAVE_FILE_FAILED=Couldn''t save file
-;TODO: ERROR_FILE_NOT_FOUND=File not found
+ERROR_FILE_NOT_FOUND=Failas nerastas
 
 ;TODO: ENCODING_ERROR_ASK_FOR_UTF8=Cannot save changes in current encoding. Convert to UTF-8?
 
-;TODO: MSG_ERROR_TITLE=Error
+MSG_ERROR_TITLE=Klaida
 ;TODO: MSG_INFO_TITLE=Information
 ;TODO: MSG_QUESTION_TITLE=Question
 ;TODO: MSG_QUIT_USDX=Really leave UltraStar?
@@ -451,45 +450,45 @@ SONG_JUMPTO_CATTEXT=Ieškoti: %s
 ;TODO: ERROR_CORRUPT_SONG_NO_NOTES=Song could not be loaded: Can''t find any notes
 ;TODO: ERROR_CORRUPT_SONG_NO_BREAKS=Song could not be loaded: Can''t find any linebreaks
 ;TODO: ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song could not be loaded: Error parsing line %0:d
-;TODO: ERROR_PLAYER_DEVICE_ASSIGNMENT=Player %d is assigned to multiple microphones. Please check your record options
-;TODO: ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone. Please check your record options
+;TODO: ERROR_PLAYER_DEVICE_ASSIGNMENT=Player %d is assigned to multiple microphones. Please check your microphone options
+;TODO: ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone. Please check your microphone options
 
-;TODO: SING_OPTIONS_NETWORK=Internet
-;TODO: SING_OPTIONS_NETWORK_WHEREAMI=Internet Options
+SING_OPTIONS_NETWORK=Internetas
+SING_OPTIONS_NETWORK_WHEREAMI=Interneto nustatymai
 ;TODO: SING_OPTIONS_NETWORK_DESC=Internet General Settings
 ;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Press key "Insert" to add user to this web...
 ;TODO: SING_OPTIONS_NETWORK_WEBSITE=Website
-;TODO: SING_OPTIONS_NETWORK_USERNAME=Username
-;TODO: SING_OPTIONS_NETWORK_PASSWORD=Password
+SING_OPTIONS_NETWORK_USERNAME=Vartotojo vardas
+SING_OPTIONS_NETWORK_PASSWORD=Slaptažodis
 ;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send Name
 ;TODO: SING_OPTIONS_NETWORK_AUTO_MODE=Auto
-;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER=Player
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-Send (Easy)
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-Send (Medium)
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-Send (Hard)
+SING_OPTIONS_NETWORK_AUTO_PLAYER=Žaidėjas
+SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-Siųsti (Lengva)
+SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-Siųsti (Vidutinis)
+SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-Siųsti (Sunku)
 ;TODO: SING_OPTIONS_NETWORK_NO_DLL=No compatible leaderboard-plugin found!
 ;TODO: SING_OPTIONS_NETWORK_DELETE_PLAYER=Really delete the user %0:s of the website %1:s?
-;TODO: SING_OPTIONS_NETWORK_LEGEND_INSERT=Insert
-;TODO: SING_OPTIONS_NETWORK_LEGEND_DELETE=Delete
+SING_OPTIONS_NETWORK_LEGEND_INSERT=Įdėti
+SING_OPTIONS_NETWORK_LEGEND_DELETE=Ištrinti
 
-;TODO: OPTION_PLAYER_1=Player 1
-;TODO: OPTION_PLAYER_2=Player 2
-;TODO: OPTION_PLAYER_3=Player 3
-;TODO: OPTION_PLAYER_4=Player 4
-;TODO: OPTION_PLAYER_5=Player 5
-;TODO: OPTION_PLAYER_6=Player 6
+OPTION_PLAYER_1=Žaidėjas 1
+OPTION_PLAYER_2=Žaidėjas 2
+OPTION_PLAYER_3=Žaidėjas 3
+OPTION_PLAYER_4=Žaidėjas 4
+OPTION_PLAYER_5=Žaidėjas 5
+OPTION_PLAYER_6=Žaidėjas 6
 ;TODO: OPTION_ALL_PLAYERS=All
 ;TODO: OPTION_ALL_SCORES=All
 ;TODO: OPTION_VALUE_SAVE=Save
-;TODO: OPTION_VALUE_SEND=Send
+OPTION_VALUE_SEND=Siųsti
 
-;TODO: MSG_INSERT_USER_TITLE=%0:s
+MSG_INSERT_USER_TITLE=%0:s
 ;TODO: MSG_INSERT_USER_DESC=Fill the fields:
-;TODO: MSG_INSERT_USER_ADD=Add
-;TODO: MSG_INSERT_USER_CANCEL=Cancel
+MSG_INSERT_USER_ADD=Papildyti
+MSG_INSERT_USER_CANCEL=Atšaukti
 
 ;TODO: WEBSITE_NO_CONNECTION=No website connection!
-;TODO: WEBSITE_LOGIN_ERROR=Login Incorrect!
+WEBSITE_LOGIN_ERROR=Neteisingas prisijungimas!
 ;TODO: WEBSITE_BLANK_LOGIN=There are blank fields!
 ;TODO: WEBSITE_EXIST_USER=Existing user!
 ;TODO: WEBSITE_ERROR_SCORE=Scoring Error!
@@ -505,27 +504,27 @@ SONG_JUMPTO_CATTEXT=Ieškoti: %s
 ;TODO: SONG_MENU_REFRESH_SCORES_ONLINE=Online
 ;TODO: SONG_MENU_REFRESH_SCORES_FILE=File
 ;TODO: SONG_MENU_REFRESH_SCORES_ALL_WEB=All Websites
-;TODO: SONG_MENU_REFRESH_SCORES_ALL_SONGS=All Songs
-;TODO: SONG_MENU_REFRESH_SCORES_ONLY_SONG=This Song
+SONG_MENU_REFRESH_SCORES_ALL_SONGS=Visos dainos
+SONG_MENU_REFRESH_SCORES_ONLY_SONG=Ši daina
 ;TODO: SONG_MENU_REFRESH_SCORES_REFRESH=Update
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connect to the website: %0:s!
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [Download Scores]'!
 
 ;TODO: SONG_SCORE_MAX=Best:
-;TODO: SONG_SCORE_MEDIA=Average:
+SONG_SCORE_MEDIA=Vidurkis:
 
 ;TODO: SCORE_SEND_DESC=Send Score
-;TODO: SCORE_SEND=Send
-;TODO: SCORE_SEND_PLAYER=Player
+SCORE_SEND=Siųsti
+SCORE_SEND_PLAYER=Žaidėjas
 ;TODO: SCORE_SEND_OTHER_USER= Other Username
 ;TODO: SCORE_SAVE=Save
 
-;TODO: SCORE_DOWNLOAD_TITLE=Download
-;TODO: SCORE_DOWNLOAD_SONG=Song:
+SCORE_DOWNLOAD_TITLE=Parsisiųsti
+SCORE_DOWNLOAD_SONG=Daina:
 ;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing List...
 ;TODO: SCORE_DOWNLOAD_RECEIVE_LIST=Downloading...
-;TODO: SCORE_DOWNLOAD_CANCEL=Cancel
-;TODO: SCORE_DOWNLOAD_OK=OK
+SCORE_DOWNLOAD_CANCEL=Atšaukti
+SCORE_DOWNLOAD_OK=Gerai
 ;TODO: SCORE_DOWNLOAD_SONG_UPDATE=%0:d song(s) change(s) by web!
 
 ;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show Scores
@@ -534,8 +533,8 @@ SONG_JUMPTO_CATTEXT=Ieškoti: %s
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
 ;TODO: PARTY_MODE_CLASSIC_FREE=Classic Free
-;TODO: PARTY_MODE_CHALLENGE=Challenge
-;TODO: PARTY_MODE_TOURNAMENT=Tournament
+PARTY_MODE_CHALLENGE=Iššūkis
+PARTY_MODE_TOURNAMENT=Turnyras
 ;TODO: PARTY_MODE_JUKEBOX=Jukebox
 ;TODO: PARTY_MODE_NOT_AVAILABLE=Not Available!
 
@@ -555,14 +554,14 @@ SONG_JUMPTO_CATTEXT=Ieškoti: %s
 
 ;TODO: MSG_END_JUKEBOX=Do you want leave Jukebox Mode?
 ;TODO: JUKEBOX_RANDOM=Random
-;TODO: JUKEBOX_REPEAT=Repeat
-;TODO: JUKEBOX_FIND=Find:
-;TODO: JUKEBOX_SORT=Sort:
+JUKEBOX_REPEAT=Pakartokite
+JUKEBOX_FIND=Rasti:
+JUKEBOX_SORT=Rūšiuoti:
 ;TODO: JUKEBOX_SONGLIST=List of Songs
 
 ;TODO: SING_ERROR_DUET_MODE_PARTY = Duet! Not playable in Party Mode!
 
-;TODO: SONG_MENU_SONG=Song
+SONG_MENU_SONG=Daina
 ;TODO: SONG_MENU_MEDLEY=Medley
 ;TODO: SONG_MENU_SORTING=Sort
 ;TODO: SONG_MENU_EXTRA=Extra
@@ -585,25 +584,25 @@ SONG_JUMPTO_CATTEXT=Ieškoti: %s
 ;TODO: SING_OPTIONS_WEBCAM_DESC=Webcam Settings
 ;TODO: SING_OPTIONS_WEBCAM_WHEREAMI=Webcam Options
 ;TODO: SING_OPTIONS_WEBCAM_ID=Webcam
-;TODO: SING_OPTIONS_WEBCAM_RESOLUTION=Resolution
+SING_OPTIONS_WEBCAM_RESOLUTION=Rezoliucija
 ;TODO: SING_OPTIONS_WEBCAM_FPS=FPS
 ;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No Webcam Found!
 ;TODO: SING_OPTIONS_WEBCAM_FLIP=Flip
-;TODO: SING_OPTIONS_WEBCAM_EFFECT=Effect
-;TODO: SING_OPTIONS_WEBCAM_BRIGHTNESS=Brightness
+SING_OPTIONS_WEBCAM_EFFECT=Efektas
+SING_OPTIONS_WEBCAM_BRIGHTNESS=Ryškumas
 ;TODO: SING_OPTIONS_WEBCAM_SATURATION=Saturation
 ;TODO: SING_OPTIONS_WEBCAM_HUE=Hue
 ;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
 ;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable Preview
 ;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable Preview
 
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_NORMAL=Normal
+SING_OPTIONS_WEBCAM_EFFECT_NORMAL=Normalus
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GRAYSCALE=Grayscale
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Black & White
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_NEGATIVE=Negative
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary Image
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_DILATE=Dilate
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Threshold
+SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Slenkstis
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EDGES=Edges
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian Blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
@@ -619,15 +618,15 @@ SONG_JUMPTO_CATTEXT=Ieškoti: %s
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 ;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
 
-;TODO: NAME_PLAYERS_COUNT=Number of Players
-;TODO: NAME_CURRENT_PLAYER=Player
+NAME_PLAYERS_COUNT=Žaidėjų skaičius
+NAME_CURRENT_PLAYER=Žaidėjas
 
-;TODO: SING_OPTIONS_GAME_SONGMENU=Song Menu
-;TODO: OPTION_VALUE_ROULETTE=Roulette
-;TODO: OPTION_VALUE_CHESSBOARD=Chessboard
-;TODO: OPTION_VALUE_CAROUSEL=Carousel
-;TODO: OPTION_VALUE_SLOT_MACHINE=Slot Machine
-;TODO: OPTION_VALUE_LIST=List
+SING_OPTIONS_GAME_SONGMENU=Daina Meniu
+OPTION_VALUE_ROULETTE=Ruletė
+OPTION_VALUE_CHESSBOARD=Šachmatų lenta
+OPTION_VALUE_CAROUSEL=Karuselė
+OPTION_VALUE_SLOT_MACHINE=Lošimų automatas
+OPTION_VALUE_LIST=Sąrašas
 ;TODO: OPTION_VALUE_MOSAIC=Tile
 
 ;TODO: SING_OPTIONS_JUKEBOX=Jukebox
@@ -635,26 +634,26 @@ SONG_JUMPTO_CATTEXT=Ieškoti: %s
 ;TODO: SING_OPTIONS_JUKEBOX_WHEREAMI=Jukebox Options
 
 ;TODO: OPTION_VALUE_TO_SING=Sing
-;TODO: OPTION_VALUE_ACTUAL=Actual
-;TODO: OPTION_VALUE_NEXT=Next
+OPTION_VALUE_ACTUAL=Viršutinė
+OPTION_VALUE_NEXT=Apatinė
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
 ;TODO: OPTION_VALUE_GRAY=Gray
-;TODO: OPTION_VALUE_WHITE=White
+OPTION_VALUE_WHITE=Balta
 ;TODO: OPTION_VALUE_TURQUOISE=Turquoise
 ;TODO: OPTION_VALUE_SALMON=Salmon
 ;TODO: OPTION_VALUE_GREENYELLOW=GreenYellow
-;TODO: OPTION_VALUE_LAVENDER=Lavender
+OPTION_VALUE_LAVENDER=Levanda
 ;TODO: OPTION_VALUE_BEIGE=Beige
 ;TODO: OPTION_VALUE_TEAL=Teal
 ;TODO: OPTION_VALUE_ORCHID=Orchid
 ;TODO: OPTION_VALUE_STEELBLUE=Steel Blue
 ;TODO: OPTION_VALUE_PLUM=Plum
-;TODO: OPTION_VALUE_CHOCOLATE=Chocolate
-;TODO: OPTION_VALUE_GOLD=Gold
+OPTION_VALUE_CHOCOLATE=Šokoladas
+OPTION_VALUE_GOLD=Auksas
 ;TODO: OPTION_VALUE_DARKBLUE=Dark Blue
-;TODO: OPTION_VALUE_SKY=Sky
+OPTION_VALUE_SKY=Dangus
 ;TODO: OPTION_VALUE_HARLEQUIN=Harlequin
 ;TODO: OPTION_VALUE_CYAN=Cyan
 ;TODO: OPTION_VALUE_FLAME=Flame
