--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -16,14 +16,14 @@ OPTION_VALUE_TITLE=Titel
 OPTION_VALUE_ARTIST=Kënschtler
 OPTION_VALUE_TITLE2=Titel2
 OPTION_VALUE_ARTIST2=Kënschtler2
-;TODO: OPTION_VALUE_YEAR=Year
-;TODO: OPTION_VALUE_DECADE=Decade
+OPTION_VALUE_YEAR=Joer
+OPTION_VALUE_DECADE=Joerzéngt
 OPTION_VALUE_PLAYLIST=Playlist
 
 ;TODO: OPTION_VALUE_BORDERLESS=Borderless
 
 OPTION_VALUE_WHENNOVIDEO=Wa kee Video
-;TODO: OPTION_VALUE_WHENNOVIDEOANDIMAGE=When No Video and Image
+OPTION_VALUE_WHENNOVIDEOANDIMAGE=Wa kee Video an Image sinn
 
 OPTION_VALUE_SMALL=Kleng
 OPTION_VALUE_BIG=Grouss
@@ -98,7 +98,6 @@ SING_OPTIONS_WHEREAMI=Optiounen
 SING_OPTIONS_GAME=Spill
 SING_OPTIONS_GRAPHICS=Graphik
 SING_OPTIONS_SOUND=Toun
-;TODO: SING_OPTIONS_INPUT=Input
 SING_OPTIONS_LYRICS=Lyric
 SING_OPTIONS_THEMES=Design
 SING_OPTIONS_RECORD=Mikro
@@ -112,15 +111,15 @@ SING_OPTIONS_GAME_DIFFICULTY=Schwieregkeet
 SING_OPTIONS_GAME_LANGUAGE=Sprooch
 SING_OPTIONS_GAME_TABS=Ordner
 SING_OPTIONS_GAME_SORTING=Zortéieren no
-;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
+SING_OPTIONS_GAME_JOYPAD_SUPPORT=Aktivéieren gamepad
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Graphikoptiounen
 SING_OPTIONS_GRAPHICS_DESC=Graphikastellungen
 SING_OPTIONS_GRAPHICS_RESOLUTION=Ofléisung
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Vollbild
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
-;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
-;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
+SING_OPTIONS_GRAPHICS_EFFECTSING=Sangeffekt
+SING_OPTIONS_GRAPHICS_SCREENFADE=Bildschierm-Faden
+SING_OPTIONS_GRAPHICS_LOADANIMATION=Lued-Animatioun
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualiséierung
 SING_OPTIONS_GRAPHICS_LINEBONUS=Sazbonus
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Videogréisst
@@ -159,11 +158,10 @@ SING_OPTIONS_RECORD_CHANNEL=Kanal
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Erweidert Optiounen
 SING_OPTIONS_ADVANCED_DESC=Erweidert Astellungen
-;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
-;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
+SING_OPTIONS_ADVANCED_DEBUG=Debug
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oszilloskop
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Sécherheetsfro
 SING_OPTIONS_ADVANCED_LINEBONUS=Sazbonus
-;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=No Liddauswiel
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto Partymenü
 
@@ -173,13 +171,13 @@ SING_LEGEND_CONTINUE=Weider
 SING_LEGEND_ESC=Zeréck
 
 ;TODO: SING_PLAYER_TITLE=Profiles
-;TODO: SING_PLAYER_READY=Players ready to sing
-;TODO: SING_PLAYER_COUNT=Number of players
+SING_PLAYER_READY=Spiller prett ze sangen
+SING_PLAYER_COUNT=Zuel vu Spiller
 ;TODO: SING_PLAYER_EDIT=Customize a player
-;TODO: SING_PLAYER_NAME=Write your name
+SING_PLAYER_NAME=Schreift Ären Numm
 ;TODO: SING_PLAYER_COLOR=Pick a color
-;TODO: SING_PLAYER_LEVEL=Choose a level
-;TODO: SING_PLAYER_AVATAR=Select your avatar
+SING_PLAYER_LEVEL=Wielt e Niveau
+SING_PLAYER_AVATAR=Wielt Äre Avatar
 
 SING_DIFFICULTY_DESC=Gräift e Schwieregkeetsgrad eraus
 SING_DIFFICULTY_WHEREAMI=Schwieregkeetsgrad
@@ -194,11 +192,11 @@ SING_SONG_SELECTION_GOTO=Erreechen
 SING_SONG_SELECTION=Liddauswiel
 SING_SONG_SELECTION_MENU=Menü
 SING_SONG_SELECTION_PLAYLIST=Playlist
-;TODO: SING_SONG_IN_CAT=Song
+SING_SONG_IN_CAT=Lidd
 SING_SONGS_IN_CAT=Lidder
 PLAYLIST_CATTEXT=Playlist: %s
 ;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
-;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
+SING_SONG_SELECTION_LEGEND_VIDEO=Video
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
 ;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
@@ -697,9 +695,9 @@ JUKEBOX_OPTIONS_PLAYLIST=Playlist
 OPTION_VALUE_ALL=Alles
 ;TODO: OPTION_VALUE_PLAYER=Player
 
-;TODO: SING_ABOUT=About
-;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
-;TODO: ABOUT_MAIN=About...
+SING_ABOUT=Iwwer
+SING_ABOUT_DESC=Iwwer Ultrastar Deluxe WorldParty
+ABOUT_MAIN=Iwwer...
 ;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
