--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -69,9 +69,9 @@ OPTION_VALUE_SELECT_PLAYERS=Wybierz graczy
 OPTION_VALUE_OPEN_MENU=Otwórz Menu
 
 SING_LOADING=Wczytywanie...
-;TODO: SING_LOADING_SONGS=Loading songs
-;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
-;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
+SING_LOADING_SONGS=Ładowanie utworów
+SING_LOADING_CHECK_FOLDER=Wyszukiwanie utworów w folderze %s
+SING_LOADING_LOAD_FOLDER=Ładowanie utworów z folderu %s
 
 SING_CHOOSE_MODE=Wybierz tryb
 SING_SING=Śpiewaj
@@ -98,7 +98,6 @@ SING_OPTIONS_WHEREAMI=Opcje
 SING_OPTIONS_GAME=Gra
 SING_OPTIONS_GRAPHICS=Grafika
 SING_OPTIONS_SOUND=Dźwięk
-SING_OPTIONS_INPUT=Wejścia
 SING_OPTIONS_LYRICS=Tekst
 SING_OPTIONS_THEMES=Style
 SING_OPTIONS_RECORD=Nagrywanie
@@ -112,15 +111,15 @@ SING_OPTIONS_GAME_DIFFICULTY=Trudność
 SING_OPTIONS_GAME_LANGUAGE=Język
 SING_OPTIONS_GAME_TABS=Zakładki
 SING_OPTIONS_GAME_SORTING=Sortowanie
-;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
+SING_OPTIONS_GAME_JOYPAD_SUPPORT=Aktywuj gamepada
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Opcje Grafiki
 SING_OPTIONS_GRAPHICS_DESC=Ustawienia grafiki
 SING_OPTIONS_GRAPHICS_RESOLUTION=Rozdzielczość
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Pełny ekran
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
-;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
-;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
+SING_OPTIONS_GRAPHICS_EFFECTSING=Efekty śpiewania
+SING_OPTIONS_GRAPHICS_SCREENFADE=Przenikanie ekranów
+SING_OPTIONS_GRAPHICS_LOADANIMATION=Animacja wczytywania
 SING_OPTIONS_GRAPHICS_VISUALIZER=Wizualizacja
 SING_OPTIONS_GRAPHICS_LINEBONUS=Linia bonusu
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Rozmiar filmu
@@ -159,11 +158,10 @@ SING_OPTIONS_RECORD_CHANNEL=Kanał
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Opcje zaawansowane
 SING_OPTIONS_ADVANCED_DESC=Zaawansowane ustawienia
-;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
-;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
+SING_OPTIONS_ADVANCED_DEBUG=Debug
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscyloskop
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Pytania pomocnicze
 SING_OPTIONS_ADVANCED_LINEBONUS=Linia bonusu
-;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Po wybraniu piosenki
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto PartyMenu
 
@@ -173,13 +171,13 @@ SING_LEGEND_CONTINUE=Kontynuacja
 SING_LEGEND_ESC=Wstecz
 
 ;TODO: SING_PLAYER_TITLE=Profiles
-;TODO: SING_PLAYER_READY=Players ready to sing
-;TODO: SING_PLAYER_COUNT=Number of players
-;TODO: SING_PLAYER_EDIT=Customize a player
-;TODO: SING_PLAYER_NAME=Write your name
-;TODO: SING_PLAYER_COLOR=Pick a color
-;TODO: SING_PLAYER_LEVEL=Choose a level
-;TODO: SING_PLAYER_AVATAR=Select your avatar
+SING_PLAYER_READY=Gracze gotowi do śpiewania
+SING_PLAYER_COUNT=Liczba graczy
+SING_PLAYER_EDIT=Dostosuj gracza
+SING_PLAYER_NAME=Napisz swoje imię
+SING_PLAYER_COLOR=Wybierz kolor
+SING_PLAYER_LEVEL=Wybierz poziom
+SING_PLAYER_AVATAR=Wybierz swój awatar
 
 SING_DIFFICULTY_DESC=Wybierz trudność
 SING_DIFFICULTY_WHEREAMI=Trudność
@@ -194,14 +192,14 @@ SING_SONG_SELECTION_GOTO=Idź do ..
 SING_SONG_SELECTION=Wybór piosenki
 SING_SONG_SELECTION_MENU=Menu
 SING_SONG_SELECTION_PLAYLIST=Playlista
-;TODO: SING_SONG_IN_CAT=Song
+SING_SONG_IN_CAT=Piosenka
 SING_SONGS_IN_CAT=Piosenki
 PLAYLIST_CATTEXT=Playlista: %s
-;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
-;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
+SING_SONG_SELECTION_LEGEND_TITLE=Legenda
+SING_SONG_SELECTION_LEGEND_VIDEO=Wideo
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
+SING_SONG_SELECTION_LEGEND_DUET=Duet
 
 SING_TOTAL=Cały
 SING_MODE=Śpiewaj solo
@@ -345,22 +343,22 @@ MODE_HOLDTHELINE_DESC=Utrzymaj swój wynik powyżej linii jak najdłużej!
 ;TODO: MODE_HOLDTHELINEBLIND_NAME=Hold the Blind
 MODE_HOLDTHELINEBLIND_DESC=Utrzymaj swój wynik powyżej linii jak najdłużej, ale z ukrytymi nutami!
 
-;TODO: MODE_7000POINTS_NAME=Until 7000
+MODE_7000POINTS_NAME=Aż do 7000
 MODE_7000POINTS_DESC=Wyścig do 7000 punktów!
 
-;TODO: MODE_7000POINTSBLIND_NAME=Blind 7000
+MODE_7000POINTSBLIND_NAME=Ślepy 7000
 MODE_7000POINTSBLIND_DESC=Wyścig do 7000 punktów, ale bez patrzenia na nuty!
 
 MODE_5000POINTS_NAME=Do 5000
 MODE_5000POINTS_DESC=Wyścig do 5000 punktów!
 
-;TODO: MODE_5000POINTSBLIND_NAME=Blind 5000
+MODE_5000POINTSBLIND_NAME=Ślepy 5000
 MODE_5000POINTSBLIND_DESC=Wyścig do 5000 punktów, ale bez patrzenia na nuty!
 
-;TODO: MODE_2000POINTS_NAME=Until 2000
+MODE_2000POINTS_NAME=Aż do 2000
 MODE_2000POINTS_DESC=Wyścig do 2000 punktów!
 
-;TODO: MODE_2000POINTSBLIND_NAME=Blind 2000
+MODE_2000POINTSBLIND_NAME=Ślepy 2000
 MODE_2000POINTSBLIND_DESC=Race to 2000 points, but without seeing the notes!
 
 MODE_DUEL_NAME=Pojedynek
@@ -375,16 +373,16 @@ MODE_BLIND_DESC=Pojedynek 1v1, ale z ukrytymi nutami!
 ;TODO: MODE_BLINDTOTAL_NAME=Total Darkness!
 MODE_BLINDTOTAL_DESC=Pojedynek, ale z ukrytymi nutami i napisami. Tylko dla odważnych!
 
-;TODO: MODE_1000BLIND_NAME = +1000 Blind
+MODE_1000BLIND_NAME = +1000 Ślepy
 MODE_1000BLIND_DESC = Uzbieraj ponad 1000 punktów, ale z ukrytymi nutami!
 
-;TODO: MODE_DEAF_NAME = Deaf
+MODE_DEAF_NAME = Głuchy
 MODE_DEAF_DESC = Myślisz że znasz nuty? Czy zaśpiewasz bez akompaniamentu?
 
 MODE_BLINDLYRICS_NAME = Bez Napisów
 MODE_BLINDLYRICS_DESC = Myślisz że znasz tekst? Zaśpiewaj bez patrzenia na napisy!
 
-;TODO: MODE_500BLIND_NAME = +500 Blind
+MODE_500BLIND_NAME = +500 Ślepy
 MODE_500BLIND_DESC = Uzbieraj ponad 500 punktów, ale z ukrytymi nutami!
 
 ;TODO: MODE_SHORTSONG_NAME = Short Song
@@ -451,10 +449,10 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Piosenka nie może być załadowana: Brak plik
 ERROR_CORRUPT_SONG_NO_NOTES=Piosenka nie może być załadowana: nie mogę znaleść nut.
 ERROR_CORRUPT_SONG_NO_BREAKS=Piosenka nie może być załadowana: nie mogę znaleść linii dzielących
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Piosenka nie może być załadowana: Błąd rozpoznawania linii %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Gracz %d został przypisany do wielu mikrofonów. Sprawdź ustawienia w opcjach gry.
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Gracz %d nie ma przypisanego mikrofonu. Sprawdź ustawienia nagrywania.
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Gracz %d został przypisany do wielu mikrofonów. Sprawdź ustawienia mikrofonów.
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Gracz %d nie ma przypisanego mikrofonu. Sprawdź ustawienia mikrofonów.
 
-;TODO: SING_OPTIONS_NETWORK=Internet
+SING_OPTIONS_NETWORK=Internet
 SING_OPTIONS_NETWORK_WHEREAMI=Opcje internetowe
 SING_OPTIONS_NETWORK_DESC=Główne ustawienia internetowe
 SING_OPTIONS_NETWORK_INSERT_USER_INFO=Wciśnij "Insert" aby dodać użytkownika do tej strony...
@@ -483,7 +481,7 @@ OPTION_ALL_SCORES=Wszystko
 OPTION_VALUE_SAVE=Zapisz
 OPTION_VALUE_SEND=Wyślij
 
-;TODO: MSG_INSERT_USER_TITLE=%0:s
+MSG_INSERT_USER_TITLE=%0:s
 MSG_INSERT_USER_DESC=Wypełnij pola:
 MSG_INSERT_USER_ADD=Dodaj
 MSG_INSERT_USER_CANCEL=Anuluj
@@ -586,14 +584,14 @@ SING_OPTIONS_WEBCAM_DESC=Ustawienia kamerki
 SING_OPTIONS_WEBCAM_WHEREAMI=Opcje kamerki
 SING_OPTIONS_WEBCAM_ID=Kamerka
 SING_OPTIONS_WEBCAM_RESOLUTION=Rozdzielczość
-;TODO: SING_OPTIONS_WEBCAM_FPS=FPS
+SING_OPTIONS_WEBCAM_FPS=FPS
 SING_OPTIONS_WEBCAM_NO_WEBCAM=Nie znaleziono kamerki!
 SING_OPTIONS_WEBCAM_FLIP=Odwróć
 SING_OPTIONS_WEBCAM_EFFECT=Efekt
 SING_OPTIONS_WEBCAM_BRIGHTNESS=Jasność
 SING_OPTIONS_WEBCAM_SATURATION=Nasycenie
 SING_OPTIONS_WEBCAM_HUE=Odcień
-;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
+SING_OPTIONS_WEBCAM_PREVIEW=Aktywuj podgląd
 SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Włącz podgląd
 SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Wyłącz podgląd
 
@@ -666,7 +664,7 @@ JUKEBOX_SONGOPTIONS_VIDEO_HEIGHT=Długość
 JUKEBOX_SONGOPTIONS_LYRIC=Opcje tekstu
 JUKEBOX_SONGOPTIONS_LYRIC_SIZE=Rozmiar
 JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Pozycja
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparency
+JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Przezroczystość
 JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Kolor
 JUKEBOX_SONGOPTIONS_LYRIC_LINE=Linia
 JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Właściwość
@@ -700,12 +698,12 @@ OPTION_VALUE_PLAYER=Gracz
 SING_ABOUT=Informacje
 SING_ABOUT_DESC=Informacje o Ultrastar Deluxe WorldParty
 ABOUT_MAIN=Informacje...
-;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
-;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
-;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
-;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
-;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
-;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+ABOUT_USDX_DEVELOPEDBY=Opracowany przez
+ABOUT_CHECK_CHECKING=Sprawdzanie nowych aktualizacji...
+ABOUT_CHECK_AVAILABLE=Dostępna jest nowa wersja
+ABOUT_CHECK_UPTODATE=WorldParty jest aktualne
+ABOUT_CHECK_CONNECTION=Brak połączenia z Internetem
+ABOUT_OVERVIEW=Odkryj nowy sposób śpiewania, sam, w parach lub z przyjaciółmi. \n Zabawa jest gwarantowana.\n\nWorldParty jest fork oryginalnej wersji Ultrastar Deluxe 1.1 zaprojektowane i opracowane przez zespół UltraStar España, liczy się z największą społecznością karaoke.\n\n\nTen program jest bezpłatny i libre na licencji GPL. \n\n Odwiedź nas, aby uzyskać więcej informacji.\n\nhttps://ultrastar-es.org
 
-;TODO: DEVELOPERS_TITLE=Developed by
-;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_TITLE=Opracowany przez
+DEVELOPERS_OVERVIEW=Ludzie, którzy przyczynili się do tego projektu:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
