--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -20,10 +20,10 @@ OPTION_VALUE_YEAR=Ano
 OPTION_VALUE_DECADE=Década
 OPTION_VALUE_PLAYLIST=Playlist
 
-;TODO: OPTION_VALUE_BORDERLESS=Borderless
+OPTION_VALUE_BORDERLESS=Maximizado
 
 OPTION_VALUE_WHENNOVIDEO=Não existir Vídeo
-;TODO: OPTION_VALUE_WHENNOVIDEOANDIMAGE=When No Video and Image
+OPTION_VALUE_WHENNOVIDEOANDIMAGE=Quando não há vídeo e imagem
 
 OPTION_VALUE_SMALL=Pequeno
 OPTION_VALUE_BIG=Grande
@@ -40,9 +40,9 @@ OPTION_VALUE_AUTO=Auto
 OPTION_VALUE_SEC=Segundo
 OPTION_VALUE_SECS=Segundos
 
-;TODO: OPTION_VALUE_PLAIN=stylized
-;TODO: OPTION_VALUE_OLINE1=with thin edge
-;TODO: OPTION_VALUE_OLINE2=with thick edge
+OPTION_VALUE_PLAIN=Estilizado
+OPTION_VALUE_OLINE1=com borda fina
+OPTION_VALUE_OLINE2=with thick edge
 
 OPTION_VALUE_SIMPLE=Simples
 OPTION_VALUE_ZOOM=Zoom
@@ -69,9 +69,9 @@ OPTION_VALUE_SELECT_PLAYERS=Escolher Jogadores
 OPTION_VALUE_OPEN_MENU=Abrir Menu
 
 SING_LOADING=A Ler...
-;TODO: SING_LOADING_SONGS=Loading songs
-;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
-;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
+SING_LOADING_SONGS=Carregando canções
+SING_LOADING_CHECK_FOLDER=Pesquisando canções na pasta %s
+SING_LOADING_LOAD_FOLDER=Carregando canções da pasta %s
 
 SING_CHOOSE_MODE=Escolha o Modo
 SING_SING=Cantar
@@ -98,7 +98,6 @@ SING_OPTIONS_WHEREAMI=Opções
 SING_OPTIONS_GAME=Jogo
 SING_OPTIONS_GRAPHICS=Gráficos
 SING_OPTIONS_SOUND=Som
-;TODO: SING_OPTIONS_INPUT=Input
 SING_OPTIONS_LYRICS=Letras
 SING_OPTIONS_THEMES=Temas
 SING_OPTIONS_RECORD=Gravação
@@ -112,15 +111,15 @@ SING_OPTIONS_GAME_DIFFICULTY=Dificuldade
 SING_OPTIONS_GAME_LANGUAGE=Idioma
 SING_OPTIONS_GAME_TABS=Subpastas
 SING_OPTIONS_GAME_SORTING=Ordenação
-;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
+SING_OPTIONS_GAME_JOYPAD_SUPPORT=Ativar o gamepad
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Opções de Gráficos
 SING_OPTIONS_GRAPHICS_DESC=Configurações dos Gráficos
 SING_OPTIONS_GRAPHICS_RESOLUTION=Resolução
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Ecrã Total
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
-;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
-;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
+SING_OPTIONS_GRAPHICS_EFFECTSING=Efeitos
+SING_OPTIONS_GRAPHICS_SCREENFADE=Fade do Ecrã
+SING_OPTIONS_GRAPHICS_LOADANIMATION=Animação
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualizador
 SING_OPTIONS_GRAPHICS_LINEBONUS=Linha Bonus
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Tamanho do Vídeo
@@ -159,11 +158,10 @@ SING_OPTIONS_RECORD_CHANNEL=Canal
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Opções Avançadas
 SING_OPTIONS_ADVANCED_DESC=Outras Opções
-;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
-;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
+SING_OPTIONS_ADVANCED_DEBUG=Modo debug
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Osciloscópio
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Segurança
 SING_OPTIONS_ADVANCED_LINEBONUS=Linha de Bônus
-;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Escolha da Canção
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Menu de Festa
 
@@ -172,14 +170,14 @@ SING_LEGEND_NAVIGATE=Navegar
 SING_LEGEND_CONTINUE=Continuar
 SING_LEGEND_ESC=Voltar
 
-;TODO: SING_PLAYER_TITLE=Profiles
-;TODO: SING_PLAYER_READY=Players ready to sing
-;TODO: SING_PLAYER_COUNT=Number of players
-;TODO: SING_PLAYER_EDIT=Customize a player
-;TODO: SING_PLAYER_NAME=Write your name
-;TODO: SING_PLAYER_COLOR=Pick a color
-;TODO: SING_PLAYER_LEVEL=Choose a level
-;TODO: SING_PLAYER_AVATAR=Select your avatar
+SING_PLAYER_TITLE=Perfis
+SING_PLAYER_READY=Jogadores prontos para cantar
+SING_PLAYER_COUNT=Número de jogadores
+SING_PLAYER_EDIT=Personalize um jogador
+SING_PLAYER_NAME=Escreva seu nome
+SING_PLAYER_COLOR=Escolha uma cor
+SING_PLAYER_LEVEL=Escolha um nível
+SING_PLAYER_AVATAR=Selecione seu avatar
 
 SING_DIFFICULTY_DESC=Nível de Dificuldade
 SING_DIFFICULTY_WHEREAMI=Dificuldade
@@ -197,11 +195,11 @@ SING_SONG_SELECTION_PLAYLIST=Playlist
 SING_SONG_IN_CAT=Cançao
 SING_SONGS_IN_CAT=Canções
 PLAYLIST_CATTEXT=Playlist: %s
-;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
-;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
+SING_SONG_SELECTION_LEGEND_TITLE=Lenda
+SING_SONG_SELECTION_LEGEND_VIDEO=Vídeo
+SING_SONG_SELECTION_LEGEND_MEDLEY=Versão curta
+SING_SONG_SELECTION_LEGEND_MEDLEYC=Versão curta calculada
+SING_SONG_SELECTION_LEGEND_DUET=Dueto
 
 SING_TOTAL=Total
 SING_MODE=Cantar Solo
@@ -345,22 +343,22 @@ MODE_HOLDTHELINE_NAME=Manter a linha
 ;TODO: MODE_HOLDTHELINEBLIND_NAME=Hold the Blind
 ;TODO: MODE_HOLDTHELINEBLIND_DESC=Keep your rating above the line for the longest, but with the notes hidden!
 
-;TODO: MODE_7000POINTS_NAME=Until 7000
+MODE_7000POINTS_NAME=Até 7000
 ;TODO: MODE_7000POINTS_DESC=Race to 7000 Points!
 
-;TODO: MODE_7000POINTSBLIND_NAME=Blind 7000
+MODE_7000POINTSBLIND_NAME=Cego 7000
 ;TODO: MODE_7000POINTSBLIND_DESC=Race to 7000 points, but without seeing the notes!
 
 MODE_5000POINTS_NAME=Até 5000
 ;TODO: MODE_5000POINTS_DESC=Race to 5000 Points!
 
-;TODO: MODE_5000POINTSBLIND_NAME=Blind 5000
+MODE_5000POINTSBLIND_NAME=Cego 5000
 ;TODO: MODE_5000POINTSBLIND_DESC=Race to 5000 points, but without seeing the notes!
 
-;TODO: MODE_2000POINTS_NAME=Until 2000
+MODE_2000POINTS_NAME=Até 2000
 ;TODO: MODE_2000POINTS_DESC=Race to 2000 Points!
 
-;TODO: MODE_2000POINTSBLIND_NAME=Blind 2000
+MODE_2000POINTSBLIND_NAME=Cego 2000
 ;TODO: MODE_2000POINTSBLIND_DESC=Race to 2000 points, but without seeing the notes!
 
 MODE_DUEL_NAME=Duelo
@@ -451,8 +449,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=A canção não foi encontrada!
 ERROR_CORRUPT_SONG_NO_NOTES=A canção não tem notas!
 ERROR_CORRUPT_SONG_NO_BREAKS=A canção não tem quebras de linha!
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Erro durante o parsing da linha %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=O Jogador %d está atribuído a vários microfones. Por favor verifique as opções de gravação!
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=O Jogador %d não está atribuído a nenhum microfone. Por favor verifique as opções de gravação!
+ERROR_PLAYER_DEVICE_ASSIGNMENT=O Jogador %d está atribuído a vários microfones. Por favor verifique as opções de microfone!
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=O Jogador %d não está atribuído a nenhum microfone. Por favor verifique as opções de microfone!
 
 SING_OPTIONS_NETWORK=Network
 SING_OPTIONS_NETWORK_WHEREAMI=Opções de Internet
@@ -593,7 +591,7 @@ SING_OPTIONS_WEBCAM_EFFECT=Efeito
 SING_OPTIONS_WEBCAM_BRIGHTNESS=Brilho
 SING_OPTIONS_WEBCAM_SATURATION=Saturação
 SING_OPTIONS_WEBCAM_HUE=Matiz
-;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
+SING_OPTIONS_WEBCAM_PREVIEW=Activar Pré-Visualização
 SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Activar Pré-Visualização
 SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Desactivar Pré-Visualização
 
@@ -609,7 +607,7 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian Blur
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equilibrada
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erosão
 
-;TODO: PARTY_PLAYLIST_MANUAL=Manual Selection
+PARTY_PLAYLIST_MANUAL=Seleção manual
 PARTY_MODE_JUKEBOX_NO_SONGS=Lista de canções está vazia!
 SONG_MENU_OPEN_CATEGORY=Abrir Categoria
 SONG_MENU_CLOSE_CATEGORY=Fechar Categoria
@@ -685,7 +683,7 @@ JUKEBOX_SONGOPTIONS_OPTIONSSAVED=Guardado!
 
 SING_SONG_CREDITS=Créditos
 SING_JUKEBOX=Jukebox
-;TODO: SING_JUKEBOX_DESC=Listen to my collection
+SING_JUKEBOX_DESC=escute minhas musicas
 JUKEBOX_MODE=Modo Jukebox
 JUKEBOX_OPTIONS_DESC=Opções de Playlist
 JUKEBOX_OPTIONS_WHEREAMI=Opções Jukebox
@@ -700,12 +698,12 @@ OPTION_VALUE_PLAYER=Jogador
 SING_ABOUT=Sobre
 SING_ABOUT_DESC=Sobre o Ultrastar Deluxe WorldParty
 ABOUT_MAIN=Sobre...
-;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
-;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
-;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
-;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
-;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
-;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+ABOUT_USDX_DEVELOPEDBY=Desenvolvido por
+ABOUT_CHECK_CHECKING=Verificando novas atualizações...
+ABOUT_CHECK_AVAILABLE=Existe uma nova versão disponível
+ABOUT_CHECK_UPTODATE=WorldParty está atualizado
+ABOUT_CHECK_CONNECTION=Não há conexão com a Internet
+ABOUT_OVERVIEW=Descubra uma nova maneira de cantar sozinho, em casal ou com amigos. \n A diversão é garantida.\n\nWorldParty é um fork da versão original Ultrastar Deluxe 1.1 projetado e desenvolvido pela equipe UltraStar España, conta com a maior comunidade de karaokê.\n\n\nEste programa é gratuito e libre sob a licença GPL. \n\n Visite-nos para mais informações.\n\nhttps://ultrastar-es.org
 
-;TODO: DEVELOPERS_TITLE=Developed by
-;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_TITLE=Desenvolvido por
+DEVELOPERS_OVERVIEW=Pessoas que contribuíram para este projeto:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visite-nos para mais informações.\n\nhttps://ultrastar-es.org
