--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -16,14 +16,14 @@ OPTION_VALUE_TITLE=Название
 OPTION_VALUE_ARTIST=Исполнитель
 OPTION_VALUE_TITLE2=Название 2
 OPTION_VALUE_ARTIST2=Исполнитель 2
-;TODO: OPTION_VALUE_YEAR=Year
-;TODO: OPTION_VALUE_DECADE=Decade
+OPTION_VALUE_YEAR=Год
+OPTION_VALUE_DECADE=десятилетие
 OPTION_VALUE_PLAYLIST=плэйлист
 
-;TODO: OPTION_VALUE_BORDERLESS=Borderless
+OPTION_VALUE_BORDERLESS=Развернуто
 
 OPTION_VALUE_WHENNOVIDEO=Если нет видео
-;TODO: OPTION_VALUE_WHENNOVIDEOANDIMAGE=When No Video and Image
+OPTION_VALUE_WHENNOVIDEOANDIMAGE=Когда нет видео и изображений
 
 OPTION_VALUE_SMALL=Маленький
 OPTION_VALUE_BIG=Большой
@@ -40,9 +40,9 @@ OPTION_VALUE_AUTO=Авто
 OPTION_VALUE_SEC=Секунда
 OPTION_VALUE_SECS=Секунд(ы)
 
-;TODO: OPTION_VALUE_PLAIN=stylized
-;TODO: OPTION_VALUE_OLINE1=with thin edge
-;TODO: OPTION_VALUE_OLINE2=with thick edge
+OPTION_VALUE_PLAIN=стилизованный
+OPTION_VALUE_OLINE1=с тонким краем
+OPTION_VALUE_OLINE2=с толстым краем
 
 OPTION_VALUE_SIMPLE=Простое
 OPTION_VALUE_ZOOM=Масштаб
@@ -70,7 +70,7 @@ OPTION_VALUE_OPEN_MENU=Открыть меню
 
 SING_LOADING=Загрузка...
 ;TODO: SING_LOADING_SONGS=Loading songs
-;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
+SING_LOADING_CHECK_FOLDER=Поиск композиций в папке %s
 ;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
 
 SING_CHOOSE_MODE=Выберите режим
@@ -98,7 +98,6 @@ SING_OPTIONS_WHEREAMI=Настройки
 SING_OPTIONS_GAME=игра
 SING_OPTIONS_GRAPHICS=графика
 SING_OPTIONS_SOUND=звук
-;TODO: SING_OPTIONS_INPUT=Input
 SING_OPTIONS_LYRICS=текст
 SING_OPTIONS_THEMES=темы
 SING_OPTIONS_RECORD=запись
@@ -112,15 +111,15 @@ SING_OPTIONS_GAME_DIFFICULTY=Сложность
 SING_OPTIONS_GAME_LANGUAGE=Язык
 SING_OPTIONS_GAME_TABS=Табы
 SING_OPTIONS_GAME_SORTING=Сортировка
-;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
+SING_OPTIONS_GAME_JOYPAD_SUPPORT=Активировать геймпад
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Настройки графики
 SING_OPTIONS_GRAPHICS_DESC=настройки графики
 SING_OPTIONS_GRAPHICS_RESOLUTION=Разрешение
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Полный экран
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
-;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
-;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
+SING_OPTIONS_GRAPHICS_EFFECTSING=Эффекты пения
+SING_OPTIONS_GRAPHICS_SCREENFADE=Затухание экрана
+SING_OPTIONS_GRAPHICS_LOADANIMATION=Анимация загрузки
 SING_OPTIONS_GRAPHICS_VISUALIZER=Визуализация
 SING_OPTIONS_GRAPHICS_LINEBONUS=Бонус "в линию"
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Размер клипа
@@ -159,11 +158,10 @@ SING_OPTIONS_RECORD_CHANNEL=Канал
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Дополнительные настройки
 SING_OPTIONS_ADVANCED_DESC=дополнительные настройки
-;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
-;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
+SING_OPTIONS_ADVANCED_DEBUG=Отладка
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Осциллограф
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Запросы
 SING_OPTIONS_ADVANCED_LINEBONUS=Бонус "В линию"
-;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=После выбора песни
 ;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto PartyMenu
 
@@ -172,14 +170,14 @@ SING_LEGEND_NAVIGATE=перейти
 SING_LEGEND_CONTINUE=продолжить
 SING_LEGEND_ESC=назад
 
-;TODO: SING_PLAYER_TITLE=Profiles
-;TODO: SING_PLAYER_READY=Players ready to sing
-;TODO: SING_PLAYER_COUNT=Number of players
-;TODO: SING_PLAYER_EDIT=Customize a player
-;TODO: SING_PLAYER_NAME=Write your name
-;TODO: SING_PLAYER_COLOR=Pick a color
-;TODO: SING_PLAYER_LEVEL=Choose a level
-;TODO: SING_PLAYER_AVATAR=Select your avatar
+SING_PLAYER_TITLE=профили
+SING_PLAYER_READY=Игроки готовы петь
+SING_PLAYER_COUNT=Количество игроков
+SING_PLAYER_EDIT=Настройка игрока
+SING_PLAYER_NAME=Напишите свое имя
+SING_PLAYER_COLOR=Выбери цвет
+SING_PLAYER_LEVEL=Выберите уровень
+SING_PLAYER_AVATAR=Выберите свой аватар
 
 SING_DIFFICULTY_DESC=уровень сложности
 SING_DIFFICULTY_WHEREAMI=Сложность
@@ -194,14 +192,14 @@ SING_SONG_SELECTION_GOTO=перейти ..
 SING_SONG_SELECTION=выбор песни
 SING_SONG_SELECTION_MENU=меню
 SING_SONG_SELECTION_PLAYLIST=плэйлист
-;TODO: SING_SONG_IN_CAT=Song
+SING_SONG_IN_CAT=песня
 SING_SONGS_IN_CAT=Песни
 PLAYLIST_CATTEXT=Плэйлист: %s
-;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
-;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
+SING_SONG_SELECTION_LEGEND_TITLE=легенда
+SING_SONG_SELECTION_LEGEND_VIDEO=видео
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
+SING_SONG_SELECTION_LEGEND_DUET=Дуэт
 
 SING_TOTAL=всего
 SING_MODE=пение соло
@@ -451,19 +449,19 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Песня не может быть загру
 ERROR_CORRUPT_SONG_NO_NOTES=Песня не может быть загружена: Невозможно найти ноты
 ERROR_CORRUPT_SONG_NO_BREAKS=Песня не может быть загружена: Невозможно найти разделители строк
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Песня не может быть загружена: Ошибка обработки строки %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Игроку %d назначено несколько микрофонов. Пожалуйста проверьте опции записи
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Игроку %d не назначено ни одного микрофона. Пожалуйста проверьте опции записи
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Игроку %d назначено несколько микрофонов. Проверьте настройки микрофона
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Игроку %d не назначено ни одного микрофона. Проверьте настройки микрофона
 
-;TODO: SING_OPTIONS_NETWORK=Internet
-;TODO: SING_OPTIONS_NETWORK_WHEREAMI=Internet Options
-;TODO: SING_OPTIONS_NETWORK_DESC=Internet General Settings
+SING_OPTIONS_NETWORK=интернет
+SING_OPTIONS_NETWORK_WHEREAMI=настройки интернета
+SING_OPTIONS_NETWORK_DESC=Общие настройки Интернета
 ;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Press key "Insert" to add user to this web...
 ;TODO: SING_OPTIONS_NETWORK_WEBSITE=Website
-;TODO: SING_OPTIONS_NETWORK_USERNAME=Username
-;TODO: SING_OPTIONS_NETWORK_PASSWORD=Password
+SING_OPTIONS_NETWORK_USERNAME=имя пользователя
+SING_OPTIONS_NETWORK_PASSWORD=пароль
 ;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send Name
 SING_OPTIONS_NETWORK_AUTO_MODE=Авто
-;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER=Player
+SING_OPTIONS_NETWORK_AUTO_PLAYER=игрок
 ;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-Send (Easy)
 ;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-Send (Medium)
 ;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-Send (Hard)
@@ -472,12 +470,12 @@ SING_OPTIONS_NETWORK_AUTO_MODE=Авто
 ;TODO: SING_OPTIONS_NETWORK_LEGEND_INSERT=Insert
 ;TODO: SING_OPTIONS_NETWORK_LEGEND_DELETE=Delete
 
-;TODO: OPTION_PLAYER_1=Player 1
-;TODO: OPTION_PLAYER_2=Player 2
-;TODO: OPTION_PLAYER_3=Player 3
-;TODO: OPTION_PLAYER_4=Player 4
-;TODO: OPTION_PLAYER_5=Player 5
-;TODO: OPTION_PLAYER_6=Player 6
+OPTION_PLAYER_1=игрок 1
+OPTION_PLAYER_2=игрок 2
+OPTION_PLAYER_3=игрок 3
+OPTION_PLAYER_4=игрок 4
+OPTION_PLAYER_5=игрок 5
+OPTION_PLAYER_6=игрок 6
 OPTION_ALL_PLAYERS=Всё
 OPTION_ALL_SCORES=Всё
 ;TODO: OPTION_VALUE_SAVE=Save
@@ -511,17 +509,17 @@ MSG_INSERT_USER_CANCEL=Отмена
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connect to the website: %0:s!
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [Download Scores]'!
 
-;TODO: SONG_SCORE_MAX=Best:
-;TODO: SONG_SCORE_MEDIA=Average:
+SONG_SCORE_MAX=Лучший:
+SONG_SCORE_MEDIA=В среднем:
 
 ;TODO: SCORE_SEND_DESC=Send Score
 ;TODO: SCORE_SEND=Send
-;TODO: SCORE_SEND_PLAYER=Player
+SCORE_SEND_PLAYER=игрок
 ;TODO: SCORE_SEND_OTHER_USER= Other Username
 ;TODO: SCORE_SAVE=Save
 
-;TODO: SCORE_DOWNLOAD_TITLE=Download
-;TODO: SCORE_DOWNLOAD_SONG=Song:
+SCORE_DOWNLOAD_TITLE=Скачать
+SCORE_DOWNLOAD_SONG=песня:
 ;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing List...
 ;TODO: SCORE_DOWNLOAD_RECEIVE_LIST=Downloading...
 SCORE_DOWNLOAD_CANCEL=Отмена
@@ -590,10 +588,10 @@ SING_OPTIONS_WEBCAM_RESOLUTION=Разрешение
 ;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No Webcam Found!
 ;TODO: SING_OPTIONS_WEBCAM_FLIP=Flip
 SING_OPTIONS_WEBCAM_EFFECT=Эффект
-;TODO: SING_OPTIONS_WEBCAM_BRIGHTNESS=Brightness
-;TODO: SING_OPTIONS_WEBCAM_SATURATION=Saturation
+SING_OPTIONS_WEBCAM_BRIGHTNESS=яркость
+SING_OPTIONS_WEBCAM_SATURATION=насыщение
 ;TODO: SING_OPTIONS_WEBCAM_HUE=Hue
-;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
+SING_OPTIONS_WEBCAM_PREVIEW=Активировать просмотр
 ;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable Preview
 ;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable Preview
 
@@ -619,34 +617,34 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Погрешность
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 ;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
 
-;TODO: NAME_PLAYERS_COUNT=Number of Players
-;TODO: NAME_CURRENT_PLAYER=Player
+NAME_PLAYERS_COUNT=Количество игроков
+NAME_CURRENT_PLAYER=игрок
 
 SING_OPTIONS_GAME_SONGMENU=Меню песен
-;TODO: OPTION_VALUE_ROULETTE=Roulette
-;TODO: OPTION_VALUE_CHESSBOARD=Chessboard
-;TODO: OPTION_VALUE_CAROUSEL=Carousel
-;TODO: OPTION_VALUE_SLOT_MACHINE=Slot Machine
-;TODO: OPTION_VALUE_LIST=List
-;TODO: OPTION_VALUE_MOSAIC=Tile
+OPTION_VALUE_ROULETTE=рулетка
+OPTION_VALUE_CHESSBOARD=шахматная доска
+OPTION_VALUE_CAROUSEL=Карусель
+OPTION_VALUE_SLOT_MACHINE=Игровой автомат
+OPTION_VALUE_LIST=Список
+OPTION_VALUE_MOSAIC=Кафельная плитка
 
 ;TODO: SING_OPTIONS_JUKEBOX=Jukebox
 ;TODO: SING_OPTIONS_JUKEBOX_DESC=Default Configurations of Jukebox
 ;TODO: SING_OPTIONS_JUKEBOX_WHEREAMI=Jukebox Options
 
 OPTION_VALUE_TO_SING=Пение
-;TODO: OPTION_VALUE_ACTUAL=Actual
-;TODO: OPTION_VALUE_NEXT=Next
-;TODO: OPTION_VALUE_OTHER=Other
+OPTION_VALUE_ACTUAL=верхний
+OPTION_VALUE_NEXT=Дно
+OPTION_VALUE_OTHER=Другие
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
-;TODO: OPTION_VALUE_GRAY=Gray
-;TODO: OPTION_VALUE_WHITE=White
-;TODO: OPTION_VALUE_TURQUOISE=Turquoise
-;TODO: OPTION_VALUE_SALMON=Salmon
-;TODO: OPTION_VALUE_GREENYELLOW=GreenYellow
-;TODO: OPTION_VALUE_LAVENDER=Lavender
-;TODO: OPTION_VALUE_BEIGE=Beige
+OPTION_VALUE_GRAY=Серый
+OPTION_VALUE_WHITE=белый
+OPTION_VALUE_TURQUOISE=Бирюзовый
+OPTION_VALUE_SALMON=Лосось
+OPTION_VALUE_GREENYELLOW=Желто-зеленый
+OPTION_VALUE_LAVENDER=лаванда
+OPTION_VALUE_BEIGE=Бежевый
 ;TODO: OPTION_VALUE_TEAL=Teal
 ;TODO: OPTION_VALUE_ORCHID=Orchid
 ;TODO: OPTION_VALUE_STEELBLUE=Steel Blue
@@ -666,7 +664,7 @@ OPTION_VALUE_TO_SING=Пение
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_SIZE=Size
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparency
+JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=прозрачность
 JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Цвет
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_LINE=Line
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
@@ -695,17 +693,17 @@ JUKEBOX_OPTIONS_PLAYLIST=плэйлист
 ;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
 OPTION_VALUE_ALL=Всё
-;TODO: OPTION_VALUE_PLAYER=Player
+OPTION_VALUE_PLAYER=игрок
 
-;TODO: SING_ABOUT=About
-;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
-;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+SING_ABOUT=Около
+SING_ABOUT_DESC=Около Ultrastar Deluxe WorldParty
+ABOUT_MAIN=Около...
+ABOUT_USDX_DEVELOPEDBY=Разработано
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
 ;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
 
-;TODO: DEVELOPERS_TITLE=Developed by
-;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_TITLE=Разработано
+DEVELOPERS_OVERVIEW=Люди, которые внесли свой вклад в этот проект:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\nПосетите нас для получения дополнительной информации.\n\nhttps://ultrastar-es.org
